--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="aleh">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CV TEST</title>
+  <title>CV</title>
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
@@ -57,7 +57,7 @@
       <section>
         <article>
           <h1 class="cover-heading"
-            style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: left;">ALEH
+            style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: left;">ALEH TEST
           </h1>
       </section>
       <section>
