--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <section>
         <article>
           <h1 class="cover-heading"
-            style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: left;">ALEH TEST
+            style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; text-align: left;">ALEH
           </h1>
       </section>
       <section>
