--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </p>
             <p>
               I have experience within a wide variety of industries such as insurance, travel
-              assistance and public/private digital post. I am software developer by heart, and my main focus is as a
+              assistance and public/private digital post. I'm software developer by heart, and my main focus is as a
               full-stack
               developer with strong competencies within Angular, Typescript (and Javascript) and Spring (Java) to name a
               few.
@@ -104,7 +104,7 @@
             </p>
             <p>
               I have experience leading teams of developers, where I ensured the facilitating, planning and coordinating
-              of the team. However, I am most proficient as a software developer leading by example.
+              of the team. However, I'm most proficient as a software developer leading by example.
             </p>
           </div>
         </div>
@@ -112,7 +112,7 @@
       <div class="bottom-bar text-center container-fluid">
         <p>Reach out to me via </p>
         <p>Mail: <a href="mailto:alexander.hoersholt@gmail.com"
-            style="margin-right: 1.5rem; color: var(--white-text-color);">alexander.hoersholt@gmail.com</a> Tlf: <a
+            style="margin-right: 1.5rem; color: var(--white-text-color);">alexander.hoersholt@gmail.com</a> Phone: <a
             href="tel:+4523662306" style="color: var(--white-text-color);">+45 23 662 306</a></p>
         <a class="icon-link" href="https://www.linkedin.com/in/alexander-h%C3%B8rsholt-b46274159/"><img
             src="icons/linkedin-app.svg" height="40px"></a>
@@ -327,7 +327,7 @@
         </h2>
         <div>
           <div class="text">
-            <p>I am certified within both SAFe and Scrum, and I have worked in these agile frameworks on many occasions
+            <p>I'm certified within both SAFe and Scrum, and I have worked in these agile frameworks on many occasions
               in my career.</p>
           </div>
           <div class="row">
@@ -405,14 +405,14 @@
             <p>
               I'm a problem solver and a fast learner. I'm able to quickly get up-to-speed in complex systems in both
               new and long running projects, and I thrive well in dynamic environments (where scope and focus may change
-              with greater frequency). I offer critical thinking, attention to detail, and consulting and software
+              with greater frequency). I offer critical thinking, attention to detail, consulting and software
               development expertise with my domains of proficiency.
             </p>
             <p>
-              I am proficient with: <i>Javascript, Typescript, Java, Spring, Node.js, Angular, Vue.js, Maven, Gradle,
+              I'm proficient with: <i>Javascript, Typescript, Java, Spring, Node.js, Angular, Vue.js, Maven, Gradle,
                 Kafka, RxJS, Liquibase, Hibernate, Git, Jenkins, Bootstrap, Google Firebase.</i>
             </p>
-            <p>I can help you with: </p>
+            <p>I can provide you with: </p>
             <ul>
               <li>Frontend development in Angular, Vue.js, React and other modern web frameworks.</li>
               <li>Backend development in Spring, Java and Node.js.</li>
@@ -420,8 +420,8 @@
               <li>Prototyping (figma), software and systems design.</li>
             </ul>
             <p>If you are interested don't hesitate reaching out to me via mail: <a
-                href="mailto:alexander.hoersholt@gmail.com" style="">alexander.hoersholt@gmail.com</a> and tlf: <a
-                href="tel:+4523662306" style="">+45 23 662 306</a>.
+                href="mailto:alexander.hoersholt@gmail.com">alexander.hoersholt@gmail.com</a> or phone: <a
+                href="tel:+4523662306">+45 23 662 306</a>.
             </p>
           </div>
         </div>
