--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
           <div class="profile">
             <p>
-              I'm a senior consultant and software developer. I'm currently situated in Copenhagen, where I'm working
+              I'm a senior consultant / software developer. I'm currently situated in Copenhagen, where I'm working
               for a well-established IT consultancy which specializes in delivering large, complex IT systems for the
               public
               and private sector. Don't hesitate reaching out to me, as I'm always on the lookout for new oppourtinties
@@ -97,7 +97,7 @@
               few.
             </p>
             <p>
-              I'm a an open person, and I enjoy working together with people (across all roles), solving problems and
+              I'm a an open person, and I enjoy collaborating with people (across all roles), solving problems and
               helping deliver the very best to the customer. I'm quick to get up to speed on projects, and adapt easily
               to the needs of the client. I have experience working according to agile methodoligies such as Scrum and
               SAFe, and more traditional methodologies.
@@ -138,7 +138,7 @@
               <div class="employee">Netcompany</div>
             </div>
             <div class="job-meta">
-              <div class="title">Senior Consultant / Lead Developer</div>
+              <div class="title">Senior Consultant / Software Developer</div>
               <div class="time">jan. 2022 - Present</div>
             </div>
             <div class="job-description">
@@ -147,6 +147,10 @@
                 microservice
                 architecture utilizing Kafka as an event-driven communication platform. View-clients for both web and
                 app were built using React Native. Everything was run on Kubernetes.
+              </p>
+              <p>
+                I was the tech lead in charge of designing and implementing payment integrations to PSP's such as: MobilePay, Aiia
+                and BetalingsService.
               </p>
               <p class="font-italic">
                 Springboot, Junit, Swagger, Docker, Java, JPA, React Native, Vue.js, SQL, git, MVC, Elasticsearch,
@@ -174,6 +178,10 @@
                 New Core Policy System for one of Denmark's largest insurance companies built using standard insurance
                 product system: Guidewire.
               </p>
+              <p>
+                I was the team lead responsible for delivering a new case management system integrating with DMR (the
+                Danish Motor Registry) and providing automatic issuing of motor insurance policies.
+              </p>
               <p class="font-italic">
                 Guidewire, Gosu, Java, Javascript, Jenkins, AWS, Swagger, REST, SOAP, SoapUI.
               </p>
@@ -197,6 +205,10 @@
                 New Case Management System for a large Danish assistance and insurance company built on a Springboot
                 microservice architecture utilizing ActiveMQ as an event-driven communication platform. The user
                 interface was built as an Angular Single Page Application. Everything was run on Openshift.
+              </p>
+              <p>
+                I was the software developer in charge of delivering a new case management system, a policy/product system
+                and customer/contract system for handling travel assistance cases and insurance policies.
               </p>
               <p class="font-italic">
                 Springboot, Junit, Swagger, Docker, Java, JPA, Angular, SQL, SAFe, Scrum, git, MVC, Elasticsearch,
@@ -269,8 +281,7 @@
               <img class="image-center" src="icons/spring.svg">
               <div class="text-center technology">Spring</div>
               <div class="text-center level">Proficient</div>
-              <div style="color: var(--gray-text-color);">I enjoy developing with Spring, and have done so since the
-                beginning of my career. I have experience with a variety of the
+              <div style="color: var(--gray-text-color);">I have been developing with Spring since the beginning of my career, and I have experience with a variety of the
                 different projects in the Spring ecosystem.</div>
             </div>
             <div class="col-4">
@@ -278,16 +289,15 @@
               <div class="text-center technology">Angular</div>
               <div class="text-center level">Proficient</div>
               <div style="color: var(--gray-text-color);">I have worked with Angular, since the beginning of my career.
-                I enjoy working with the rich variety of features available in Angular, and the structure and
-                reuseability that comes naturally with this framework.</div>
+                I have been developing SPA's in Angular using the composability,
+                reuseability and structure provided by the framework.</div>
             </div>
             <div class="col-4">
               <img class="image-center" src="icons/typescript.svg">
               <div class="text-center technology">Typescript</div>
               <div class="text-center level">Proficient</div>
-              <div style="color: var(--gray-text-color);">I have worked a lot with Typescript (and Javascript), but I
-                particular appreciate this language for
-                the type safety and tooling it adds to Javascript.</div>
+              <div style="color: var(--gray-text-color);">I have worked a lot with Typescript (and Javascript), and I
+                appreciate this language for the type safety and tooling it adds on top of Javascript.</div>
             </div>
           </div>
 
@@ -327,8 +337,8 @@
         </h2>
         <div>
           <div class="text">
-            <p>I'm certified within both SAFe and Scrum, and I have worked in these agile frameworks on many occasions
-              in my career.</p>
+            <p>I'm certified within both SAFe and Scrum, and I have worked with these agile frameworks on many occasions
+              during my career.</p>
           </div>
           <div class="row">
 
@@ -349,8 +359,8 @@
           <div class="list-group w-auto">
             <p>I hold a <span style="font-weight:500">M.Sc degree</span> in Mathematical Modelling and Computer Science
               from the <span style="font-weight:500">Technical University of Denmark (DTU)</span> with a specialization
-              within Scientific Computing, Numerical and Predictive Modelling, Machine Learning, Optimization and a
-              theoretical understanding of Advanced Mathematics. My background in mathematics has given me an strong
+              within Scientific Computing. I also have a strong understanding of Numerical and Predictive Modelling, Machine Learning, Optimization and a
+              theoretical understanding of Advanced Mathematics to support this. My background in mathematics has given me an strong
               analytical mindset and aptitude for problem solving, which I use everyday in my work. University grades
               and curriculum can be forwarded.</p>
             <p>A categorised list of publications that I have written is available below. All three papers have been
