--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                 <a class="nav-link" href="#experienceId">Experience</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#skillsId">Skills</a>
+                <a class="nav-link" href="#skillsId">Competencies</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#accomplishmentsId">Accomplishments</a>
+                <a class="nav-link" href="#accomplishmentsId">Certifications</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contactMeId">Contact me</a>
@@ -149,7 +149,8 @@
                 app were built using React Native. Everything was run on Kubernetes.
               </p>
               <p>
-                I was the tech lead in charge of designing and implementing payment integrations to PSP's such as: MobilePay, Aiia
+                I was the tech lead in charge of designing and implementing payment integrations to PSP's such as:
+                MobilePay, Aiia
                 and BetalingsService.
               </p>
               <p class="font-italic">
@@ -207,7 +208,8 @@
                 interface was built as an Angular Single Page Application. Everything was run on Openshift.
               </p>
               <p>
-                I was the software developer in charge of delivering a new case management system, a policy/product system
+                I was the software developer in charge of delivering a new case management system, a policy/product
+                system
                 and customer/contract system for handling travel assistance cases and insurance policies.
               </p>
               <p class="font-italic">
@@ -273,7 +275,7 @@
 
       <section id="skillsId" class="section">
         <h2 class="text-center">
-          Skills & Competencies
+          Competencies
         </h2>
         <div>
           <div class="row">
@@ -281,7 +283,8 @@
               <img class="image-center" src="icons/spring.svg">
               <div class="text-center technology">Spring</div>
               <div class="text-center level">Proficient</div>
-              <div style="color: var(--gray-text-color);">I have been developing with Spring since the beginning of my career, and I have experience with a variety of the
+              <div style="color: var(--gray-text-color);">I have been developing with Spring since the beginning of my
+                career, and I have experience with a variety of the
                 different projects in the Spring ecosystem.</div>
             </div>
             <div class="col-4">
@@ -301,39 +304,39 @@
             </div>
           </div>
 
-          <div class="text-center bottom-skills">
-            <p>Complete skillset</p>
+          <div class="text-center bottom-competencies" style="font-weight: 550;">
+            <p>Complete set of competencies</p>
           </div>
 
           <div class="text-center">
-            <span class="skill-tag">Javascript</span>
-            <span class="skill-tag">Typescript</span>
-            <span class="skill-tag">Java</span>
-            <span class="skill-tag">Spring (Boot, Web, Cloud, Security, Data)</span>
-            <span class="skill-tag">Node.js</span>
-            <span class="skill-tag">Jenkins</span>
-            <span class="skill-tag">Angular2+</span>
-            <span class="skill-tag">Maven</span>
-            <span class="skill-tag">Gradle</span>
-            <span class="skill-tag">Kafka</span>
-            <span class="skill-tag">RxJS</span>
-            <span class="skill-tag">Vue.js</span>
-            <span class="skill-tag">Firebase</span>
-            <span class="skill-tag">Liquibase</span>
-            <span class="skill-tag">Hibernate</span>
-            <span class="skill-tag">Shell</span>
-            <span class="skill-tag">CSS/SCSS</span>
-            <span class="skill-tag">Git</span>
-            <span class="skill-tag">C/C++</span>
-            <span class="skill-tag">Python</span>
-            <span class="skill-tag">MatLab</span>
+            <span class="competency">Javascript</span>
+            <span class="competency">Typescript</span>
+            <span class="competency">Java</span>
+            <span class="competency">Spring (Boot, Web, Cloud, Security, Data)</span>
+            <span class="competency">Node.js</span>
+            <span class="competency">Jenkins</span>
+            <span class="competency">Angular2+</span>
+            <span class="competency">Maven</span>
+            <span class="competency">Gradle</span>
+            <span class="competency">Kafka</span>
+            <span class="competency">RxJS</span>
+            <span class="competency">Vue.js</span>
+            <span class="competency">Firebase</span>
+            <span class="competency">Liquibase</span>
+            <span class="competency">Hibernate</span>
+            <span class="competency">Shell</span>
+            <span class="competency">CSS/SCSS</span>
+            <span class="competency">Git</span>
+            <span class="competency">C/C++</span>
+            <span class="competency">Python</span>
+            <span class="competency">MatLab</span>
           </div>
         </div>
       </section>
 
       <section id="accomplishmentsId" class="section">
         <h2 class="text-center">
-          Accomplishments & Academic Experience
+          Certifications & Academic Experience
         </h2>
         <div>
           <div class="text">
@@ -359,8 +362,10 @@
           <div class="list-group w-auto">
             <p>I hold a <span style="font-weight:500">M.Sc degree</span> in Mathematical Modelling and Computer Science
               from the <span style="font-weight:500">Technical University of Denmark (DTU)</span> with a specialization
-              within Scientific Computing. I also have a strong understanding of Numerical and Predictive Modelling, Machine Learning, Optimization and a
-              theoretical understanding of Advanced Mathematics to support this. My background in mathematics has given me an strong
+              within Scientific Computing. I also have a strong understanding of Numerical and Predictive Modelling,
+              Machine Learning, Optimization and a
+              theoretical understanding of Advanced Mathematics to support this. My background in mathematics has given
+              me an strong
               analytical mindset and aptitude for problem solving, which I use everyday in my work. University grades
               and curriculum can be forwarded.</p>
             <p>A categorised list of publications that I have written is available below. All three papers have been
@@ -422,18 +427,27 @@
               I'm proficient with: <i>Javascript, Typescript, Java, Spring, Node.js, Angular, Vue.js, Maven, Gradle,
                 Kafka, RxJS, Liquibase, Hibernate, Git, Jenkins, Bootstrap, Google Firebase.</i>
             </p>
-            <p>I can provide you with: </p>
+            <p>If you need help within the areas of: </p>
             <ul>
-              <li>Frontend development in Angular, Vue.js, React and other modern web frameworks.</li>
               <li>Backend development in Spring, Java and Node.js.</li>
+              <li>Frontend development in Angular, Vue.js, React and other modern web frameworks.</li>
               <li>Requirements gathering, software and systems analysis.</li>
               <li>Prototyping (figma), software and systems design.</li>
+              <li>Genuine consulting and problem solving.</li>
             </ul>
-            <p>If you are interested don't hesitate reaching out to me via mail: <a
+            <p>I can provide you with assistance, and if you are interested, then don't hesitate reaching out to me via mail: <a
                 href="mailto:alexander.hoersholt@gmail.com">alexander.hoersholt@gmail.com</a> or phone: <a
                 href="tel:+4523662306">+45 23 662 306</a>.
             </p>
           </div>
+        </div>
+        <div class="text-center">
+          <a class="icon-link" href="https://www.linkedin.com/in/alexander-h%C3%B8rsholt-b46274159/"><img
+              src="icons/linkedin-app.svg" height="40px"></a>
+          <a class="icon-link" href="https://github.com/alexhoers"><img src="icons/github.svg" height="40px"></a>
+          <a class="icon-link"
+            href="https://scholar.google.com/scholar?hl=da&as_sdt=0%2C5&q=alexander+h%C3%B8rsholt&btnG="><img
+              src="icons/google-scholar.svg" height="46px"></a>
         </div>
       </section>
 
