Updated spelling mistakes

--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
               I'm a senior consultant / software developer. I'm currently situated in Copenhagen, where I'm working
               for a well-established IT consultancy which specializes in delivering large, complex IT systems for the
               public
-              and private sector. Don't hesitate reaching out to me, as I'm always on the lookout for new oppourtinties
+              and private sector. Don't hesitate reaching out to me, as I'm always on the lookout for new opportunities 
               within the IT industry.
             </p>
             <p>
               I have experience within a wide variety of industries such as insurance, travel
-              assistance and public/private digital post. I'm software developer by heart, and my main focus is as a
+              assistance, financial services and public/private digital post. I'm software developer by heart, and my main focus is as a
               full-stack
               developer with strong competencies within Angular, Typescript (and Javascript) and Spring (Java) to name a
               few.
@@ -100,7 +100,7 @@
               I'm a an open person, and I enjoy collaborating with people (across all roles), solving problems and
               helping deliver the very best to the customer. I'm quick to get up to speed on projects, and adapt easily
               to the needs of the client. I have experience working according to agile methodoligies such as Scrum and
-              SAFe, and more traditional methodologies.
+              SAFe, and more traditional methodoligies.
             </p>
             <p>
               I have experience leading teams of developers, where I ensured the facilitating, planning and coordinating
@@ -124,6 +124,7 @@
     </header>
 
     <div class="wrapper container">
+      <p style="page-break-before: always;"></p>
       <section id="experienceId" class="section">
         <h2 class="text-center">
           Professional Experience
@@ -273,6 +274,7 @@
         </div>
       </section>
 
+      <p style="page-break-before: always;"></p>
       <section id="skillsId" class="section">
         <h2 class="text-center">
           Competencies
@@ -314,6 +316,10 @@
             <span class="competency">Java</span>
             <span class="competency">Spring (Boot, Web, Cloud, Security, Data)</span>
             <span class="competency">Node.js</span>
+            <span class="competency">Linux</span>
+            <span class="competency">Docker</span>
+            <span class="competency">Kubernetes</span>
+            <span class="competency">Bootstrap</span>
             <span class="competency">Jenkins</span>
             <span class="competency">Angular2+</span>
             <span class="competency">Maven</span>
@@ -324,7 +330,7 @@
             <span class="competency">Firebase</span>
             <span class="competency">Liquibase</span>
             <span class="competency">Hibernate</span>
-            <span class="competency">Shell</span>
+            <span class="competency">Bash</span>
             <span class="competency">CSS/SCSS</span>
             <span class="competency">Git</span>
             <span class="competency">C/C++</span>
@@ -334,6 +340,7 @@
         </div>
       </section>
 
+      <p style="page-break-before: always;"></p>
       <section id="accomplishmentsId" class="section">
         <h2 class="text-center">
           Certifications & Academic Experience
@@ -409,6 +416,7 @@
           </div>
       </section>
 
+      <p style="page-break-before: always;"></p>
       <section id="contactMeId" class="section">
         <h2 class="text-center">
           Contact me
@@ -425,7 +433,7 @@
             </p>
             <p>
               I'm proficient with: <i>Javascript, Typescript, Java, Spring, Node.js, Angular, Vue.js, Maven, Gradle,
-                Kafka, RxJS, Liquibase, Hibernate, Git, Jenkins, Bootstrap, Google Firebase.</i>
+                Kafka, RxJS, Liquibase, Hibernate, Git, Jenkins, Docker, Kubernetes, Bootstrap, Google Firebase, Html, SCSS/CSS, Bootstrap, Linux.</i>
             </p>
             <p>If you need help within the areas of: </p>
             <ul>
