--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
           <div class="profile">
             <p>
-              I'm a senior consultant / software developer. I'm currently situated in Copenhagen, where I'm working
+              I'm a senior consultant / software developer. I'm currently situated in Copenhagen, where I work
               for a well-established IT consultancy which specializes in delivering large, complex IT systems for the
               public
               and private sector. Don't hesitate reaching out to me, as I'm always on the lookout for new opportunities 
@@ -91,16 +91,14 @@
             </p>
             <p>
               I have experience within a wide variety of industries such as insurance, travel
-              assistance, financial services and public/private digital post. I'm software developer by heart, and my main focus is as a
-              full-stack
-              developer with strong competencies within Angular, Typescript (and Javascript) and Spring (Java) to name a
-              few.
+              assistance, financial services and public/private digital post. I'm an experienced full-stack, software developer with strong competencies within Angular (Typescript), Vue (Javascript) and Spring (Java) to name a
+              few. The section below include a complete overview of my technology stack.
             </p>
             <p>
-              I'm a an open person, and I enjoy collaborating with people (across all roles), solving problems and
+              I'm an open person, and I enjoy collaborating with people (across all roles), solving problems and
               helping deliver the very best to the customer. I'm quick to get up to speed on projects, and adapt easily
-              to the needs of the client. I have experience working according to agile methodoligies such as Scrum and
-              SAFe, and more traditional methodoligies.
+              to the needs of the client. I have experience working according agile such as Scrum and
+              SAFe, as well as using more traditional methodoligies.
             </p>
             <p>
               I have experience leading teams of developers, where I ensured the facilitating, planning and coordinating
@@ -150,9 +148,8 @@
                 app were built using React Native. Everything was run on Kubernetes.
               </p>
               <p>
-                I was the tech lead in charge of designing and implementing payment integrations to PSP's such as:
-                MobilePay, Aiia
-                and BetalingsService.
+                I was the technical lead / lead developer in charge of designing and implementing various features. For example, payment integrations enabling users to pay bills via digital post through PSP's such:
+                MobilePay and Aiia.
               </p>
               <p class="font-italic">
                 Springboot, Junit, Swagger, Docker, Java, JPA, React Native, Vue.js, SQL, git, MVC, Elasticsearch,
@@ -177,8 +174,8 @@
             </div>
             <div class="job-description">
               <p>
-                New Core Policy System for one of Denmark's largest insurance companies built using standard insurance
-                product system: Guidewire.
+                New Core Policy System for one of Denmark's largest insurance companies built using the standard insurance
+                product system known as: Guidewire.
               </p>
               <p>
                 I was the team lead responsible for delivering a new case management system integrating with DMR (the
@@ -204,12 +201,12 @@
             </div>
             <div class="job-description">
               <p>
-                New Case Management System for a large Danish assistance and insurance company built on a Springboot
+                New Case Management System for a large Danish travel assistance and insurance company built on a Springboot
                 microservice architecture utilizing ActiveMQ as an event-driven communication platform. The user
                 interface was built as an Angular Single Page Application. Everything was run on Openshift.
               </p>
               <p>
-                I was the software developer in charge of delivering a new case management system, a policy/product
+                I was the software developer working on the design and implementation of a new case management system, a policy/product
                 system
                 and customer/contract system for handling travel assistance cases and insurance policies.
               </p>
