Updated CV 2023 jan

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
         <div class="text-center">
           <h1> Alexander Hørsholt </h1>
           <div class="job-title">
-            Senior Consultant / Software Developer
+            Senior IT Architect / Software Developer
           </div>
           <div class="profile">
             <p>
-              I'm a senior consultant / software developer. I'm currently situated in Copenhagen, where I work
+              I'm a senior IT architect and software developer. I'm currently situated in Copenhagen, where I work
               for a well-established IT consultancy which specializes in delivering large, complex IT systems for the
               public
               and private sector. Don't hesitate reaching out to me, as I'm always on the lookout for new opportunities 
@@ -128,6 +128,32 @@
           Professional Experience
         </h2>
         <div class="timeline">
+
+          <!-- Mit.dk -->
+          <div class="item">
+            <div class="work-place">
+              <h3 class="place">
+                Mit.dk
+              </h3>
+              <div class="employee">Netcompany</div>
+            </div>
+            <div class="job-meta">
+              <div class="title">Senior IT Architect / Software Developer</div>
+              <div class="time">jan. 2023 - Present</div>
+            </div>
+            <div class="job-description">
+              <p>
+                New Caseworker Portal used by caseworkers and administrators for registering customers and maintaining loans to different energy suppliers offered by the Danish Goverment (DA: "Indefrysningsordning"). The portal was built as a SPA using the Nuxt.js framework built on top of Vue.js. Mirage.js was used for creating a sophisticated mock API against which the SPA was run.
+              </p>
+              <p>
+                New Administrative Access Portal used for maintaining digital post systems setup with Mit.dk for public and private clients. The portal used similar frameworks and techologies as above.
+              </p>
+              <p class="font-italic">
+                Jest, Vue.js, git, MVC, SPA, Javascript, Typescript, HTML, RxJS, Bootstrap, Jenkins, Node.js, Kubernetes, Maven, Kafka, Gradle., Geb.
+              </p>
+            </div>
+          </div>
+
           <!-- Mit.dk -->
           <div class="item">
             <div class="work-place">
@@ -138,13 +164,12 @@
             </div>
             <div class="job-meta">
               <div class="title">Senior Consultant / Software Developer</div>
-              <div class="time">jan. 2022 - Present</div>
+              <div class="time">jan. 2022 - dec. 2022</div>
             </div>
             <div class="job-description">
               <p>
                 New Digital Mailbox System (Mit.dk) developed for private and public sector built on a Springboot
-                microservice
-                architecture utilizing Kafka as an event-driven communication platform. View-clients for both web and
+                microservice architecture utilizing Kafka as an event-driven communication platform. View-clients for both web and
                 app were built using React Native. Everything was run on Kubernetes.
               </p>
               <p>
